# voicecraft

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/agent/: .dockerignore  .env.example  Dockerfile  nixpacks.toml  pyproject.toml  railway.toml
apps/agent/src/agent/: config_loader.py  http_client.py  plugins.py  prompts.py  tools.py  worker.py
apps/agent/src/api/: main.py
apps/agent/tests/: test_prompts.py
apps/web/: .env.example  Dockerfile  next.config.js  nixpacks.toml  package.json  railway.toml  tailwind.config.ts  tsconfig.json
apps/web/src/: auth.ts  middleware.ts  proxy.ts
apps/web/src/app/: globals.css  (+3 more)
docs/: india-pricing-analysis.md  market-analysis.md
docs/superpowers/plans/: 2026-03-15-voicecraft-dashboard-redesign.md  2026-03-17-appointments-foundation.md  2026-03-17-calendar-connection-manual-appointments.md  2026-03-18-auth-pages.md  2026-03-18-microsoft-outlook-calendar.md  2026-03-18-sms-bot-inbox.md  2026-03-18-whatsapp-messaging.md  2026-03-20-privacy-terms-pages.md  2026-03-20-subscription-billing.md
docs/superpowers/specs/: 2026-03-15-voicecraft-dashboard-redesign.md  2026-03-16-calendar-appointments-contacts-design.md  2026-03-17-appointments-foundation-design.md  2026-03-17-calendar-connection-manual-appointments-design.md  2026-03-18-auth-pages-design.md  2026-03-18-microsoft-outlook-calendar-design.md  2026-03-18-sms-bot-inbox-design.md  2026-03-18-whatsapp-messaging-design.md  2026-03-20-privacy-terms-pages-design.md  2026-03-20-subscription-billing-design.md
(+205 files in other folders)
